# pretty-please-bot

./: .gitignore  pyproject.toml  run.py
bot_template/core/: __init__.py  app.py  app_config.py  telegram_bot.py
bot_template/data_model/: dm_mongo.py  dm_pydantic.py
pretty_please_bot/core/: __init__.py  app.py  app_config.py  telegram_bot.py
tests/: test_app.py  test_bot.py
