[tool.poetry]
name = "pretty-please-bot"
version = "0.0.1"
template_version = "0.2.0" # update for new bot-base version
description = ""
authors = ["Petr Lavrov <calmmage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# for stability, use frozen-app-name branch
bot-base = { git = "https://github.com/calmmage/bot-base.git", branch = "frozen-pretty-please-bot" }
pytest = "^7.4.2"
pytest-mongodb = "^2.4.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.1.0"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
